Add YoutubeSearcher as a Service Add warning msg when using slash commands (because beta)